<resources>
    <string name="app_name">Sri Vannamayil Chits</string>
    <string name="str_ln_title">Sign in to Continue</string>
    <string name="str_ln_loginfirst">Please Login</string>
    <string name="str_ln_titlebold">Welcome,</string>
    <string name="str_ln_email">\tUser Name</string>
    <string name="str_al_emailoptional">Email (Optional)</string>
    <string name="str_al_address1">Address line 1 (optional)</string>
    <string name="str_al_address2">Address line 2 (optional)</string>
    <string name="str_al_nextdate">Next Followup date (Optional)</string>
    <string name="str_al_addlead">\t Add Lead \t</string>
    <string name="str_al_addfollowup">\t Add Followup \t</string>
    <string name="str_ln_password">\tPassword</string>
    <string name="str_ln_remarks">Remarks</string>
    <string name="str_ln_signin">Sign In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Namw</string>
    <string name="nav_header_subtitle">Access Type</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_enterotp">Enter the One time password sent to you by sms or E-mail</string>
    <string name="str_keyvariable">mazechit_finger_key</string>
    <string name="str_doesnt_support_fingerprint">Your device doesn\'t support fingerprint authentication</string>
    <string name="str_enable_fingerprint_permission">Please enable the fingerprint permission</string>
    <string name="str_fingerprint_not_configured">No fingerprint configured. Please register at least one fingerprint in
        your device\'s Settings
    </string>
    <string name="str_enable_security">Please enable lockscreen security in your device\'s Settings</string>
    <string name="str_to_enable_fingerprint">To enable Fingerprint, Please Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_notification">Notification</string>
    <string name="str_cominsonn">Coming Soon !!</string>
    <string name="str_selectbranch">Select Branch</string>
    <string name="str_branch">Branch</string>
    <string name="str_auctiondate">Auction date</string>
    <string name="str_targetvscollected">Collection - Target Vs Acheived</string>
    <string name="str_col_targetvscollected">Collection - Target Vs Acheived</string>
    <string name="str_lead_targetvscollected">Leads - Target Vs Acheived</string>
    <string name="str_todaycollection">Today\'s Collection</string>
    <string name="str_totaldevices">Total no. of Devices</string>
    <string name="str_totalusers">Total no. of users</string>
    <string name="str_totalsubscribers">Total no. of Subscribers</string>
    <string name="str_activedevices">Active Devices</string>
    <string name="str_activedusers">Active Users</string>
    <string name="str_inactivedevices">Inactive Devices</string>
    <string name="str_inactiveusers">Inactive Users</string>
    <string name="str_cashinhand">Cash in Hand</string>
    <string name="str_settleamnt">Settle Amount</string>
    <string name="str_receipts">Receipts</string>
    <string name="str_receiptgenerated">No. of Receipts Generated Today</string>
    <string name="str_viewdetails">View Details</string>
    <string name="str_leads">Leads</string>
    <string name="str_vacantchitreport">Vacant Chit Report</string>
    <string name="str_noofvacant">Total no. of Vacants</string>
    <string name="str_noofleadsgentd">No. of Leads Generated</string>
    <string name="str_leadsgentdon">Lead Generated on</string>
    <string name="str_lastfollowup">Lost Followup</string>
    <string name="str_nextfollowup">Next Followup</string>
    <string name="str_noofleadsenrld">No. of Leads Enrolled</string>
    <string name="str_submit">Submit</string>
    <string name="str_verify">Verify</string>
    <string name="str_cancel">Cancel</string>
    <string name="customer_name">Subscriber Name</string>
    <string name="chitvalue">Chit Value</string>
    <string name="user_name">User Name</string>
    <string name="deviec_name">Device Name</string>
    <string name="mobileno">Mobile No.</string>
    <string name="phoneno">Phone No. (Optional)</string>
    <string name="searchere">Search Here</string>
    <string name="status">Status</string>
    <string name="collected">Collected</string>
    <string name="received">Received Amount</string>
    <string name="tobecollected">To be Collected</string>
    <string name="enrolled_only">Enrolled Only \t</string>
    <string name="updatesettings">Update Settings</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_pasword">New Password</string>
    <string name="str_save">Save</string>
    <string name="changepassword_caution">Warning : Changing the Password will Logout the Current Session</string>
    <string name="lead_detail">Lead Details</string>
    <string name="followupstatus">Followup Status</string>
    <string name="followup_date">Followup Date</string>
    <string name="folllowup_remark">Followup Remark</string>
    <string name="installments">Installments</string>
    <string name="prized_status">Prized Status</string>
    <string name="penalty">Penalty</string>
    <string name="bonus">Bonus</string>
    <string name="advance">Advance</string>
    <string name="discount">Discount</string>
    <string name="discountondue">Discount on Due</string>
    <string name="discountonpenalty">Discount on Penalty</string>
    <string name="other_charges">Other Charges</string>
    <string name="total">Total</string>
    <string name="payable">Paying</string>
    <string name="settle_amount">Settle Amount</string>
    <string name="view_gen_recpts">View Generated Receipts</string>
    <string name="auctionno">Auction</string>
    <string name="pending">Pending</string>
    <string name="receiptamnt">Receipt Amount</string>
    <string name="receiptamntMAN">Receipt Amount (*)</string>
    <string name="paymenttype">Payment Type</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="nointernet">Turn on Internet connection !</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">SCAN DEVICES</string>
    <string name="prompt">Forward to</string>
    <string name="bufferstring">App may stop responding. Don\'t Press Back Button</string>
    <string name="buffertitlecust">Aquiring Customers...</string>
    <string name="buffer_uploadingl">Uploading Receipts...</string>
    <string name="nulls"></string>
    <string name="connect_bluetooth_device_btn">Connect</string>
    <string name="connect_to_ip_btn">connect to IP</string>
    <string name="print_content_hint_edt">please input the print content!</string>
    <string name="checkbox_beikuan">Width</string>
    <string name="checkbox_underline">Underline</string>
    <string name="checkbox_bold">Bold</string>
    <string name="checkbox_height">Height</string>
    <string name="checkbox_minifont">Minifont</string>
    <string name="checkbox_hightlight">Hightlight</string>
    <string name="print_btn">Print</string>
    <string name="test_btn">test</string>
    <string name="option_btn">Print Option</string>
    <string name="bt_inquiry_btn">Inquiry Status</string>
    <string name="quit_btn">Quit</string>
    <string name="back_btn">Back</string>
    <string name="print_table_btn">Print table</string>
    <string name="print_smallticket_btn">Print Small Ticket</string>
    <string name="print_barcode_btn">Print Barcode</string>
    <string name="barcode_content_edt">Most can only enter 16 characters!</string>
    <string name="print_image_btn">Print Image</string>
    <string name="print_text_btn">Print Text</string>
    <string name="print_option">Print Option</string>
    <string name="search_bluetooth_device_btn">Search Bluetooth Device</string>
    <string name="bluetooth_listactivity_title">Please select a device to connect</string>
    <string name="bluetooth_connect_fail">Bluetooth Device Connect Failed!</string>
    <string name="bluetooth_connect_sucess">Congratulations, successfully connect to Bluetooth devices:</string>
    <string name="wifi_connect_fail">WIFI Connect Failed!</string>
    <string name="wifi_connect_sucess">Congratulations, successfully connect to WIFI</string>
    <string name="bluetooth_unconnected">Not Connected!</string>
    <string name="bluetooth_open_hint">Bluetooth not open,please open bluetooth!</string>
    <string name="bluetooth_address_invidate_hint">Bluetooth address invalidate,please check!</string>
    <string name="barcode_input_hint">please input 0~9 character!</string>
    <string name="no_bluetooth_device_hint">No bluetooth device!</string>
    <string name="no_start_bluetooth_hint">No start bluetooth!</string>
    <string name="bluetooth_address_invalid_hint">Bluetooth Address invalid!</string>
    <string name="bluetooth_address_err_hint">Bluetooth Address Err!</string>
    <string name="start_bluetooth_err_hint">Start Bluetooth Err!</string>
    <string name="is_close_local_bluetooth_hint">Is Close Local Bluetooth?</string>
    <string name="yes_hint">Yes</string>
    <string name="no_hint">No</string>
    <string name="close_bluetooth_err_hint">close bluetooth err!</string>
    <string name="bluetooth_status_matched_hint">matched</string>
    <string name="bluetooth_status_unmatched_hint">unmatched</string>
    <string name="connecting_bluetooth_device_hint">Connecting Bluetooth Device...</string>
    <string name="please_wait_hint">Please Wait...</string>
    <string name="get_bluetooth_device_err_hint">Get Bluetooth device err!</string>
    <string name="search_bluetooth_device_err_hint">Search Bluetooth device err!</string>
    <string name="bluetooth_device_handler_err_hint">Bluetooth device Handler Err!</string>
    <string name="bluetooth_status_err_hint">Bluetooth Status Err,please restart bluetooth!</string>
    <string name="bluetooth_close_sucess_hint">Local Bluetooth Close Sucess!</string>
    <string name="search_printer_hint">Local Bluetooth Open Sucess,please search printer!</string>
    <string name="search_complete_hint">Bluetooth Device Search Complete!</string>
    <string name="match_process_fail_hint">Match Process Failed!</string>
    <string name="connected_device_hint">Connected Device:</string>
    <string name="bluetooth_connected_cannot_connect">Bluetooth Connected,do not need to reconnect!</string>
    <string name="unopen_bluetooth_hint">Bluetooth is closed,will you open it or not?</string>
    <string name="open_bluetooth_err_hint">Open Bluetooth err!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="youAreNotUpdatedMessage">A new version of the application is available. Please update to version
    </string>
    <string name="youAreNotUpdatedMessage1">now</string>
    <string name="groupname">Group Name</string>
    <string name="filter">Filters</string>
    <string name="selct_group">Select Group Name</string>
    <string name="sel_coll_area">Select Collection Area</string>
    <string name="col_area">Collection Area</string>
    <string name="date_range">Date Range</string>
    <string name="sel_daterange">Select Date Range</string>
    <string name="apply">Apply Filter</string>
    <string name="str_rest">Reset</string>
</resources>