<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_50"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/crumbslay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="4dp">

        <TextView
            android:id="@+id/crumbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/grey_700"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/crumbslay"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/colorWhite"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_connect_bluetooth_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="   Connect   " />

        <Button
            android:id="@+id/btn_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="   Print   "
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonlay"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="    Connect a Bluetooth Printer and Choose Print to Print the Receipt ."
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/edt_print_content"
        android:layout_width="fill_parent"
        android:layout_height="180dip"
        android:gravity="top|left"
        android:hint="@string/print_content_hint_edt"
        android:visibility="gone" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_beikuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/checkbox_beikuan" />

            <CheckBox
                android:id="@+id/checkbox_underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:checked="false"
                android:text="@string/checkbox_underline" />

            <CheckBox
                android:id="@+id/checkbox_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:checked="false"
                android:text="@string/checkbox_bold" />
        </TableRow>

        <TableRow>

            <CheckBox
                android:id="@+id/checkbox_beigao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/checkbox_height" />

            <CheckBox
                android:id="@+id/checkbox_minifont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:checked="false"
                android:text="@string/checkbox_minifont" />

            <CheckBox
                android:id="@+id/checkbox_hightlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:checked="false"
                android:text="@string/checkbox_hightlight" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <Button
            android:id="@+id/btn_print1"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:text="@string/print_btn" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:text="@string/test_btn" />

        <Button
            android:id="@+id/btn_option"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dip"
            android:text="@string/option_btn" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_bt_inquiry"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/bt_inquiry_btn"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_quit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/quit_btn"
        android:visibility="gone" />
</RelativeLayout>