<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:paddingBottom="@dimen/sp16_space">


    <TextView
            android:text="@string/change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9"
            android:textSize="@dimen/sp16_space"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:textColor="@color/colorBlack" android:textStyle="bold"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:ems="10"
            android:textSize="@dimen/sp16_space"
            android:id="@+id/edt_cp_oldpassword"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView12"
            android:layout_marginTop="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/new_pasword"
            android:textSize="@dimen/sp16_space"
            android:ems="10"
            android:id="@+id/edt_cp_newpassword"
            app:layout_constraintStart_toStartOf="@+id/edt_cp_oldpassword" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_cp_oldpassword" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/changepassword_caution"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:id="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/textView9" android:textColor="@color/deep_orange_A400"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/sp8_space"/>
</android.support.constraint.ConstraintLayout>