<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/filterlayout"
        android:layout_height="match_parent" android:background="@color/grey_100">

    <android.support.constraint.ConstraintLayout
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:id="@+id/appbar"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">


        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_close"
                android:id="@+id/img_close"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:text="@string/filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_marginStart="@dimen/sp18_space"
                app:layout_constraintStart_toEndOf="@+id/img_close"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/colorWhite" android:textSize="@dimen/sp18_space"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/card_background"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/appbar"
             android:layout_marginTop="16dp"
            android:id="@+id/group_layout">

        <TextView
                android:text="@string/groupname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp16_space"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/selct_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_stroke"
                android:id="@+id/txt_grpname"
                app:layout_constraintTop_toBottomOf="@id/textView14"
                app:layout_constraintStart_toStartOf="@+id/textView14"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:textColor="@color/colorPrimary"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/col_area_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/card_background"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/group_layout">

        <TextView
                android:text="@string/col_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp16_space"
               app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/sel_coll_area"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_stroke"
                android:id="@+id/txt_colarea"
                app:layout_constraintTop_toBottomOf="@id/textView16"
                app:layout_constraintStart_toStartOf="@+id/textView16" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp" android:textColor="@color/colorPrimary"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/card_background"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/col_area_layout"
            android:id="@+id/daterange_layout">

        <TextView
                android:text="@string/date_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/sp16_space" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/sel_daterange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/box_stroke"
                android:id="@+id/txt_daterange"
                app:layout_constraintTop_toBottomOf="@id/textView18"
                app:layout_constraintStart_toStartOf="@+id/textView18"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"/>
    </android.support.constraint.ConstraintLayout>
    <Button
            android:text="@string/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_applyfilter"
            android:elevation="@dimen/sp4_space"
            android:background="@drawable/button_background"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/btn_resetfilter"
            app:layout_constraintBottom_toBottomOf="@+id/btn_resetfilter"/>
    <Button
            android:text="@string/str_rest"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/btn_resetfilter"
            android:background="@drawable/button_background_colorless"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline5"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
</android.support.constraint.ConstraintLayout>