<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/sp16_space">


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
              android:text="@string/str_enterotp" app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
              android:textSize="@dimen/sp16_space"
              android:layout_marginStart="8dp" android:layout_marginTop="24dp" android:id="@+id/textView2"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Enter OTP"
            android:ems="10"
            android:minHeight="48dp"
            android:textSize="@dimen/sp16_space"
            android:padding="@dimen/sp8_space"
            android:background="@drawable/fingerprintbox"
            android:id="@+id/edt_otp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"/>
    <TextView
            android:id="@+id/btn_otp_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp16_space"
            android:text="@string/str_cancel" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@+id/btn_otp_submit"
            app:layout_constraintBottom_toBottomOf="@+id/btn_otp_submit"
            app:layout_constraintTop_toTopOf="@+id/btn_otp_submit"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_otp_submit"
            android:textSize="@dimen/sp16_space"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            android:text="@string/str_verify"
            app:layout_constraintEnd_toEndOf="@+id/edt_otp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/edt_otp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp16_space"
            android:id="@+id/txt_timer"
            app:layout_constraintStart_toStartOf="@+id/edt_otp"
            app:layout_constraintTop_toBottomOf="@+id/edt_otp"
            android:layout_marginTop="24dp"/>


</android.support.constraint.ConstraintLayout>