<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/AppTheme"
        android:orientation="vertical"
        android:gravity="bottom">

    <ImageView
            android:layout_width="35dp"
            android:layout_height="39dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/ic_usericon"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/img_userimage"
            app:layout_constraintBottom_toTopOf="@+id/txt_username" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginBottom="4dp"/>

    <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/img_userimage"
            app:layout_constraintBottom_toTopOf="@+id/txt_accesstype" android:layout_marginBottom="4dp"/>

    <Switch
            android:text="Offline  "
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/switch_offline" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="@+id/txt_accesstype"
            app:layout_constraintBottom_toBottomOf="@+id/txt_accesstype"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:id="@+id/txt_accesstype" android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="@+id/txt_username"
            android:layout_marginBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/switch_offline" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textMultiLine"/>


</android.support.constraint.ConstraintLayout>
